--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -120,5 +120,5 @@
 }
 
 body {
-  background-color: #f9f9f9; /* Tailwind’s gray-100 hex */
+  background-color: #f1f9ffe2; /* Tailwind’s gray-100 hex */
 }
